<resources>
    <string name="app_name">Likes On Tumblr</string>
    <string name="image_page_count">p%1$d: %2$d photos found</string>
    <string name="total_image_count">%d photos stored</string>
    <string name="all_loaded">All loaded</string>
    <string name="pretty">Pretty</string>
    <string name="loading">Loading likes…</string>
    <string name="photo_action_favourite">Favourite</string>
    <string name="photo_action_like">Like</string>
    <string name="photo_action_liked">Liked</string>
    <string name="photo_action_hide">Hide</string>
    <string name="introduction">This app allows you to view liked photo posts of a single Tumblr blog offline.
        \n\n
        The first time this app runs, it will retrieve all liked posts from the blog you have specified. Once they have been downloaded, you can view the posts as full screen images.
        \n\n
        In the background, all photos are downloaded and cached at their highest resolution. Please be aware that this may take considerable storage space on your device.
        \n\n
        Liked posts are synchronized once a day.
    </string>
    <string name="tumblr_key">Tumblr API key:</string>
    <string name="tumblr_key_hint">Your Tumblr API key</string>
    <string name="tumblr_blog">Tumblr blog:</string>
    <string name="tumblr_blog_hint">your blog name</string>
    <string name="ok">OK</string>
    <string name="introduction_title">Welcome to Likes On Tumblr</string>
    <string name="tumblr_blog_message">Please type the Tumblr blog below that you would like to see the likes of:</string>
    <string name="enter_new_pincode">Enter a new pincode (4 digits)</string>
    <string name="repeat_new_pincode">Repeat the new pincode</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="skip">Skip</string>
    <string name="pincode_no_match">Pincode doesn\'t match</string>
    <string name="error_load">There was an error loading a file. Please start the app to continue.</string>

    <string name="error_title">Error!</string>
    <string name="error_403">Access to the blog has been denied</string>
    <string name="error_404">Blog could not be found</string>
    <string name="error_300_400">Failed to load blog data</string>
    <string name="error_500">Internal server error</string>

    <string name="btn_retry">Retry</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_settings">Settings</string>
    <string name="blog_extension">.tumblr.com</string>
    <string name="loading_cancelled">Loading cancelled</string>
    
    <string name="version">V%s</string>
    <string name="view_count">View count: %d</string>
    <string name="check_cache">Check cache</string>
    <string name="cache_miss_count">%s cache misses found</string>
    <string name="cache_check_error">Cache check failed</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="export_photos">Export data</string>
    <string name="export_success">Export complete!</string>
    <string name="export_error">Export failed</string>
    <string name="refresh_success">Latest likes loaded, %s photos stored</string>
    <string name="refresh_error">Refresh failed</string>
    <string name="refresh_success_no_new_photos">Refreshed</string>
    <string name="dataActionHeader">Data actions</string>
    <string name="refresh_all_likes">Refresh all likes</string>
    <string name="photo_action_screenshot">Save</string>
    <string name="photo_saved">Saved to %s</string>
    <string name="photo_save_error">Failed to save photo</string>
</resources>
