<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/title"
        android:text="@string/introduction_title"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:textColor="@color/body_text"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/introduction_text"
        android:text="@string/introduction"
        android:textColor="@color/body_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        />

    <TextView
        android:id="@+id/btn_privacy_policy"
        android:text="@string/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction_text"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:text="@string/tumblr_blog_message"
        android:textSize="16sp"
        android:textColor="@color/body_text"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16sp"
        app:layout_constraintBottom_toTopOf="@+id/blog_input_container"
        />

    <LinearLayout
        android:id="@+id/blog_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_ok"
        >
        <EditText
            android:hint="@string/tumblr_blog_hint"
            android:id="@+id/input_tumblr_blog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            />

        <TextView
            android:id="@+id/blog_ext_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog_extension"
            android:textColor="@color/body_text"
            android:textSize="14sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_ok"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="V1.0.2"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ok"
        />

    <TextView
        android:id="@+id/btn_check_cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_cache"
        android:textColor="@color/button_color"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ok"
        />

</android.support.constraint.ConstraintLayout>