<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_overlay_background"
    android:id="@+id/background"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/popup_list_margin"
        android:paddingBottom="@dimen/popup_list_margin"
        android:layout_gravity="center"
        android:background="@color/white"
        android:elevation="10dp"
        >
        <TextView
            android:id="@+id/btn_favorite"
            android:text="@string/photo_action_favourite"
            style="@style/PopupListItem"
            android:drawableStart="@drawable/ic_star_border_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_list_item_height"
            />

        <TextView
            android:id="@+id/btn_like"
            android:text="@string/photo_action_like"
            style="@style/PopupListItem"
            android:drawableStart="@drawable/ic_plus_one_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_list_item_height"/>

        <TextView
            android:id="@+id/btn_unlike"
            android:text="@string/photo_action_unlike"
            style="@style/PopupListItem"
            android:drawableStart="@drawable/ic_exposure_neg_1_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_list_item_height"/>

        <TextView
            android:id="@+id/btn_hide"
            android:text="@string/photo_action_hide"
            style="@style/PopupListItem"
            android:drawableStart="@drawable/ic_block_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_list_item_height"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/popup_list_padding"
            android:paddingEnd="@dimen/popup_list_padding"
            android:gravity="end"
            >
            <TextView
                android:id="@+id/txt_view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/body_text"
                android:layout_marginStart="6dp"
                tools:text="View count: 255"
                android:textSize="12sp"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>