<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp"
        />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_close_black_24dp"
        android:scaleType="center"
        android:background="@color/transparent"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/actionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataActionHeader"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeButton"
        />

    <TextView
        android:id="@+id/checkCacheButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_cache"
        style="@style/TextOnlyButton"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left"
        app:layout_constraintTop_toBottomOf="@+id/actionHeader"
        />

    <TextView
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_photos"
        style="@style/TextOnlyButton"
        app:layout_constraintLeft_toLeftOf="@+id/guide_left"
        app:layout_constraintTop_toBottomOf="@+id/checkCacheButton"
        />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="V1.0.2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/guide_right"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guide"
        />

</androidx.constraintlayout.widget.ConstraintLayout>